Fixing blurry font on iPhone

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -25,7 +25,7 @@ h3,
 h4{
   font-family: 'Playfair Display', serif;
   character-spacing: 1.5px;
-  -webkit-transform: translate3d(0,0,0);
+  text-rendering: optimizeLegibility;
 }
 
 a:visited,
